--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
         <!-- First image in the first row -->
         <div class="image-container">
             <img src="nearby-victims.jpg" height="462" alt="Image 1">
-            <div class="image-caption">a. Nearby victims</div>
+            <div class="image-caption">(a) Nearby victims</div>
         </div>
         
         <!-- Second image in the first row -->
         <div class="image-container">
             <img src="direction.jpg" alt="Image 2">
-            <div class="image-caption">b. Direction to nearby victims</div>
+            <div class="image-caption">(b) Direction to nearby victims</div>
         </div>
 
         <!-- First image in the second row -->
         <div class="image-container">
             <img src="shelters.jpg" height="360" alt="Image 3">
-            <div class="image-caption">c. Nearby shelters</div>
+            <div class="image-caption">(c) Nearby shelters</div>
         </div>
 
         <!-- Second image in the second row -->
         <div class="image-container">
             <img src="chat.jpg" alt="Image 4">
-            <div class="image-caption">d. Chat with nearby victims</div>
+            <div class="image-caption">(d) Chat with nearby victims</div>
         </div>
     </div>
 
