--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Second image in the second row -->
         <div class="image-container">
             <img src="chat.jpg" alt="Image 4">
-            <div class="image-caption">(d) Chat with nearby victims</div>
+            <div class="image-caption">(d) Chat interface</div>
         </div>
     </div>
 
