--- a/index.html
+++ b/index.html
@@ -36,28 +36,18 @@
     <div class="gallery">
         <!-- First image in the first row -->
         <div class="image-container">
-            <img src="nearby-victims.jpg" height="462" alt="Image 1">
-            <div class="image-caption">(a) Nearby victims</div>
+            <img src="donate.jpg" height="auto" alt="Image 1">
+            <div class="image-caption">(a) Fundraising organizations</div>
         </div>
         
         <!-- Second image in the first row -->
         <div class="image-container">
-            <img src="direction.jpg" alt="Image 2">
-            <div class="image-caption">(b) Direction to nearby victims</div>
+            <img src="donate-3.png" style="margin-top: 100px;" alt="Image 2">
+            <div class="image-caption" style="margin-top: 50px;">(b) bKash interface</div>
         </div>
 
-        <!-- First image in the second row -->
-        <div class="image-container">
-            <img src="shelters.jpg" height="360" alt="Image 3">
-            <div class="image-caption">(c) Nearby shelters</div>
-        </div>
+    <div>
 
-        <!-- Second image in the second row -->
-        <div class="image-container">
-            <img src="chat.jpg" alt="Image 4">
-            <div class="image-caption">(d) Chat interface</div>
-        </div>
-    </div>
 
 </body>
 </html>
