--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div class="gallery">
         <!-- First image in the first row -->
         <div class="image-container">
-            <img src="donate.jpg" height="auto" alt="Image 1">
-            <div class="image-caption">(a) Fundraising organizations</div>
+            <img src="posts.jpg" style="margin-top: 77px;" alt="Image 1">
+            <div class="image-caption" style="margin-top: 30px;">(a) Fundraising organizations</div>
         </div>
         
         <!-- Second image in the first row -->
         <div class="image-container">
-            <img src="donate-3.png" style="margin-top: 100px;" alt="Image 2">
-            <div class="image-caption" style="margin-top: 50px;">(b) bKash interface</div>
+            <img src="alert.jpg" alt="Image 2">
+            <div class="image-caption">(b) bKash interface</div>
         </div>
 
     <div>
