--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <!-- First image in the first row -->
         <div class="image-container">
             <img src="posts.jpg" style="margin-top: 77px;" alt="Image 1">
-            <div class="image-caption" style="margin-top: 30px;">(a) Fundraising organizations</div>
+            <div class="image-caption" style="margin-top: 30px;">(a) Public posts</div>
         </div>
         
         <!-- Second image in the first row -->
         <div class="image-container">
             <img src="alert.jpg" alt="Image 2">
-            <div class="image-caption">(b) bKash interface</div>
+            <div class="image-caption">(b) Location-based severity alert</div>
         </div>
 
     <div>
